@@ -1,3 +1,7 @@
+xxxx-xx-xx Version x.x
+
+	* Fixed copy route errors
+
 2011-10-19 Version 2.4
 
 	* Fixed error in intended route broadcast
